syntax= "proto3";

option go_package= "github.com/flydevs/chat-app-api/oauth-api/src/clients/rpc/oauth";

package flydev_chat_oauth;

service OauthProtoInterface{
    rpc LoginUser (LoginRequest) returns (JWTAndUuidResponse) {}
    rpc LoginClient(ServiceKey) returns (JWTResponse) {}

    rpc Verify (JWT) returns (EntityResponse){}
}

message LoginRequest{
    string username =1;
    string password =2;
}
message Uuid {
    string uuid =1;
}

message ServiceKey{
    string Key = 1;
}

message JWT{
    string Jwt =1;
}

message JWTResponse{
    string Jwt =1;
    Svr_msg Response =2;
}

message JWTAndUuidResponse{
    string Jwt = 1;
    Uuid Uuid=2;
    Svr_msg Response =3;
}

message EntityResponse{
    Uuid Uuid = 1;
    int32 Permissions = 2;
    Svr_msg Response = 3;
}

message Svr_msg{
    int32 status=1;
    string message=2;
}